--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "",
+  "name": "codetips",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "pnpm exec prettier . --write"
   },
   "dependencies": {
     "astro": "^5.0.9"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
