--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "pnpm exec prettier . --write"
   },
   "dependencies": {
-    "astro": "^5.0.9"
+    "@astrojs/tailwind": "^5.1.3",
+    "astro": "^5.0.9",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "prettier": "^3.4.2",
