--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "format": "pnpm exec prettier . --write"
   },
   "dependencies": {
+    "@astrojs/react": "^4.1.1",
     "@astrojs/tailwind": "^5.1.3",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "astro": "^5.0.9",
-    "tailwindcss": "^3.4.17"
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.468.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "prettier": "^3.4.2",
