feat: enable page-insight analysis

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.0.9",
+    "astro-page-insight": "^0.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
