--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/react": "^4.1.1",
     "@astrojs/tailwind": "^5.1.3",
+    "@fontsource-variable/playwrite-gb-j": "^5.1.0",
+    "@fontsource-variable/playwrite-gb-s": "^5.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/react": "^19.0.2",
