--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@astrojs/react": "^4.1.1",
     "@astrojs/tailwind": "^5.1.3",
+    "@fontsource-variable/playwrite-de-grund": "^5.1.1",
     "@fontsource-variable/playwrite-gb-j": "^5.1.0",
     "@fontsource-variable/playwrite-gb-s": "^5.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
