--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "pnpm exec prettier . --write"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.0.3",
     "@astrojs/react": "^4.1.1",
     "@astrojs/tailwind": "^5.1.3",
     "@fontsource-variable/playwrite-de-grund": "^5.1.1",
@@ -26,13 +27,18 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
+    "mdast-util-to-string": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "reading-time": "^1.5.0",
+    "rehype-preset-minify": "^7.0.1",
+    "remark-toc": "^9.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1"
   }
