--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@astrojs/react": "^4.1.1",
     "@astrojs/tailwind": "^5.1.3",
     "@fontsource-variable/playwrite-de-grund": "^5.1.1",
-    "@fontsource-variable/playwrite-gb-j": "^5.1.0",
     "@fontsource-variable/playwrite-gb-s": "^5.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
@@ -32,6 +31,7 @@
     "react-dom": "^19.0.0",
     "reading-time": "^1.5.0",
     "rehype-preset-minify": "^7.0.1",
+    "remark-gemoji": "^8.0.0",
     "remark-toc": "^9.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
