--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
@@ -13,8 +13,10 @@
     "@astrojs/mdx": "^4.0.3",
     "@astrojs/react": "^4.1.1",
     "@astrojs/tailwind": "^5.1.3",
+    "@fontsource-variable/inter": "^5.1.1",
     "@fontsource-variable/playwrite-de-grund": "^5.1.1",
     "@fontsource-variable/playwrite-gb-s": "^5.1.0",
+    "@fontsource/poppins": "^5.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
