--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@shikijs/transformers": "^2.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1"
